# EdgePoints-MNN

./: CMakeLists.txt  README.md  package.xml
include/: edgepoints.h
launch/: match.launch
model/: EdgePoint.engine  EdgePoint.onnx
scripts/: EdgePoint.py  demo.py  export.py  soft_detect.py
src/: demo.cpp  edgepoints.cpp
